syntax = "proto3";

package com.homelibrary.api;

option java_multiple_files = true;
option java_package = "com.homelibrary.api";

service BookService {
  // Uploads a new book entry with images
  rpc UploadBook (UploadBookRequest) returns (UploadBookResponse);
}

message UploadBookRequest {
  BookMetadata metadata = 1;
  repeated PageImage images = 2;
}

message BookMetadata {
  // Optional: User provided ID or temporary ID
  string client_ref_id = 1;
  string language = 2; // e.g. "rus", "eng", "rus+eng"
}

message PageImage {
  ImageType type = 1;
  bytes data = 2;
}

enum ImageType {
  IMAGE_TYPE_UNSPECIFIED = 0;
  COVER = 1;
  BACK = 2;
  INFO_PAGE = 3;
}

message UploadBookResponse {
  string book_id = 1;
  string title = 2;
  repeated string authors = 3;
  string isbn = 4;
  int32 publication_year = 5;
  string publisher = 6;
  bool success = 7;
  string error_message = 8;
}
